crates/vexor-compiler/tests/golden/error/output/unclosed_string.err
Error: parse error
   ╭─[ input:2:13 ]
   │
 2 │ val label = "hello
   │             ┬  
   │             ╰── invalid string
   │             │  
   │             ╰── expected closing `"`
───╯
